# automic-etl

./: .env.example  .gitignore  .replit  CODEBASE_REVIEW.md  IMPROVEMENTS_SUMMARY.md  PLAN.md  README.md  pyproject.toml  replit.md
.claude/: settings.local.json
.streamlit/: config.toml
.zencoder/rules/: repo.md
attached_assets/: Pasted--Overview-We-re-working-with-large-scale-conversational_1764683325067.txt  Pasted-sqlalchemy-exc-ProgrammingError-psycopg2-errors-Undefin_1764903551322.txt
config/: .env.production.template  production.yaml  settings.yaml
examples/: augmented_etl_example.py  basic_pipeline.py  llm_augmented_pipeline.py  scd2_pipeline.py  unstructured_pipeline.py
src/automic_etl/: __init__.py  cli.py
src/automic_etl/api/: __init__.py  main.py  models.py
src/automic_etl/api/middleware/: __init__.py  security.py
src/automic_etl/api/routes/: __init__.py  admin.py  airflow.py  companies.py  connectors.py  health.py  jobs.py  lineage.py  pipelines.py  queries.py  tables.py
src/automic_etl/auth/: __init__.py  company_manager.py  manager.py  models.py  rbac.py  security.py  session.py  superadmin.py  tenant.py
src/automic_etl/connectors/: __init__.py  base.py  registry.py
src/automic_etl/connectors/api/: __init__.py  hubspot.py  rest.py  salesforce.py  stripe.py
src/automic_etl/connectors/databases/: __init__.py  bigquery.py  mongodb.py  mysql.py  postgresql.py  snowflake.py
src/automic_etl/connectors/datasets/: __init__.py  huggingface.py
src/automic_etl/connectors/files/: __init__.py  csv_connector.py  json_connector.py  parquet_connector.py
src/automic_etl/connectors/media/: __init__.py  audio.py
src/automic_etl/connectors/streaming/: __init__.py  kafka.py  kinesis.py  pubsub.py
src/automic_etl/connectors/unstructured/: __init__.py  documents.py  pdf.py
src/automic_etl/core/: __init__.py  config.py  exceptions.py  pipeline.py  resources.py  retry.py  utils.py  validation.py
src/automic_etl/db/: __init__.py  alert_service.py  auth_service.py  connector_service.py  data_service.py  engine.py  job_service.py  models.py  pipeline_service.py  table_service.py  validation_service.py
src/automic_etl/extraction/: __init__.py  batch.py  incremental.py  watermark.py
src/automic_etl/integrations/: __init__.py  airflow.py  airflow_agentic.py  airflow_dag_factory.py  airflow_operators.py  airflow_optimizer.py  dbt.py  great_expectations.py  mlflow.py  openmetadata.py  spark.py
src/automic_etl/lineage/: __init__.py  graph.py  tracker.py
src/automic_etl/llm/: __init__.py  augmented_etl.py  client.py  data_classifier.py  entity_extractor.py  query_builder.py  schema_generator.py  sql_assistant.py
src/automic_etl/llm/prompts/: __init__.py  templates.py
src/automic_etl/medallion/: __init__.py  bronze.py  gold.py  lakehouse.py  scd.py  silver.py
src/automic_etl/notifications/: __init__.py  alerts.py  channels.py  event_service.py  notifier.py
src/automic_etl/orchestration/: __init__.py  job.py  scheduler.py  workflow.py
src/automic_etl/services/: __init__.py  dataset_curator.py  qa.py  redaction.py
src/automic_etl/storage/: __init__.py  aws_s3.py  azure_blob.py  base.py  delta.py  factory.py  gcs.py
src/automic_etl/storage/iceberg/: __init__.py  catalog.py  schemas.py  tables.py
src/automic_etl/ui/: __init__.py  admin_pages.py  app.py  auth_pages.py  components.py  export.py  notifications.py  search.py  shortcuts.py  state.py  theme.py  widgets.py
src/automic_etl/ui/pages/: __init__.py  ai_services.py  airflow_orchestration.py  alerts.py  company_admin.py  connectors_mgmt.py  data_processing.py  data_profiling.py  ingestion.py  integrations.py  jobs.py  lineage.py  monitoring.py  pipeline_builder.py  query_studio.py  settings.py  superadmin.py  validation.py
src/automic_etl/utils/: __init__.py  helpers.py  logging.py
src/automic_etl/validation/: __init__.py  quality.py  rules.py  validator.py
tests/: __init__.py  conftest.py  test_airflow_integration.py  test_config.py  test_llm_client.py  test_medallion_bronze.py  test_validation.py
