[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "automic-etl"
version = "0.1.0"
description = "AI-Augmented ETL Tool for building Lakehouses with Medallion Architecture"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Datant LLC" }
]
keywords = [
    "etl",
    "lakehouse",
    "iceberg",
    "medallion",
    "polars",
    "llm",
    "data-engineering"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core data processing
    "polars>=1.0.0",
    "pyarrow>=15.0.0",

    # Apache Iceberg
    "pyiceberg>=0.7.0",

    # Cloud storage
    "boto3>=1.34.0",
    "google-cloud-storage>=2.14.0",
    "azure-storage-blob>=12.19.0",
    "azure-identity>=1.15.0",

    # Database connectors
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
    "pymongo>=4.6.0",
    "snowflake-connector-python>=3.6.0",
    "snowflake-sqlalchemy>=1.5.0",
    "google-cloud-bigquery>=3.17.0",
    "google-cloud-bigquery-storage>=2.24.0",
    "db-dtypes>=1.2.0",

    # Delta Lake
    "deltalake>=0.15.0",

    # Unstructured data processing
    "unstructured>=0.12.0",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.2.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",

    # LLM integration
    "litellm>=1.30.0",
    "anthropic>=0.18.0",
    "openai>=1.12.0",

    # API connectors
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "simple-salesforce>=1.12.0",

    # Streaming
    "confluent-kafka>=2.3.0",

    # Configuration & CLI
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.0",
    "typer>=0.9.0",
    "rich>=13.7.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "croniter>=2.0.0",
    "networkx>=3.2.0",
    "apscheduler>=3.10.0",

    # Web UI
    "streamlit>=1.31.0",
    "plotly>=5.18.0",
    "altair>=5.2.0",

    # REST API
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "pre-commit>=3.6.0",
    "moto>=5.0.0",
    "localstack>=3.0.0",
]

all = [
    "automic-etl[dev]",
]

[project.scripts]
automic = "automic_etl.cli:app"

[project.urls]
Homepage = "https://github.com/datantllc/automic-etl"
Documentation = "https://github.com/datantllc/automic-etl#readme"
Repository = "https://github.com/datantllc/automic-etl"

[tool.hatch.build.targets.wheel]
packages = ["src/automic_etl"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["automic_etl"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=automic_etl --cov-report=term-missing"

[tool.coverage.run]
source = ["src/automic_etl"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
